[package]
name = "yakitsuke"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/yakitsuke"
homepage = "https://github.com/pleme-io/yakitsuke"
description = "Safe ROM flasher"

[[bin]]
name = "yakitsuke"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nusb = "0.1"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
